--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <link rel="icon" href="/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Vue-admin-element</title>
+    <meta name="referrer" content="no-referrer"/>
   </head>
   <body>
     <div id="app"></div>
